--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
                         <p>
                             <a href="mailto:hello@josh.design">
-                                hello@josh.design
+                                Ajmaltravels2023@gmail.com
                             </a>
                         </p>
                     </div>
@@ -236,6 +236,7 @@
 
             <div class="col-lg-12 col-12">
                 <div class="copyright-text-wrap">
+                    <p>Tripblasters LLC</p>
                 </div>
             </div>
 
