--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="">
-    <meta name="author" content="TemplateMo">
+    <meta name="description" content="Compare. Save. Travel Smarter">
 
-    <title>First Portfolio Bootstrap 5 Theme</title>
+    <title>Tripblasters LLC</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
