--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="projects-thumb">
                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                            <h3 class="mb-0">Cheap filghts</h3>
+                            <h3 class="mb-0">Cheap flights</h3>
                         </div>
 
                         <p>Discover affordable flights worldwide, compare options effortlessly, and enjoy
